# sigma-racer-telemetry

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: gen-telemetry-tls.sh  provision-mechanic-tls.sh
src/: availability.rs  lib.rs  m7_dbc.rs
src/anomaly/: consistency.rs  engine.rs  event.rs  manager.rs  mod.rs  rate.rs  sequence.rs  staleness.rs  threshold.rs  types.rs
src/can/: candump.rs  decode.rs  encode.rs  map.rs  mod.rs
src/client/: line_pump.rs  mod.rs  outcome.rs  reader.rs  subscription.rs  tcp.rs  tcp_reader.rs  unix.rs
src/io/: backlog_writer.rs  mod.rs
src/protocol/: constants.rs  diff.rs  message.rs  mod.rs  parse_error.rs
src/relay/: broadcaster.rs  mod.rs
src/socket/: mod.rs  permissions.rs
src/state/: coerce.rs  mod.rs  vehicle_state.rs  vss.rs
src/tls/: config.rs  material.rs  mod.rs  pem.rs  pin.rs  role.rs  stream.rs
tests/: anomaly_replay.rs  mtls_relay.rs
tests/fixtures/: faulty-ride.jsonl  nominal-ride.jsonl
