[package]
name = "sigma-racer-telemetry"
description = "Sigma Racer VSS telemetry protocol, CAN decode, and IPC client"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/sigma-racer-telemetry"
homepage = "https://github.com/sigmatactical-org/sigma-racer-telemetry"
publish = false

[dependencies]
sigma-racer-sidearm = { git = "https://github.com/sigmatactical-org/sigma-racer-sidearm.git", rev = "a4c04c8", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
