[package]
name = "sigma-racer-telemetry"
description = "Sigma Racer VSS telemetry protocol, CAN decode, and IPC client"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/sigma-racer-telemetry"
homepage = "https://sigmatactical.org"
publish = false

[dependencies]
sigma-racer-sidearm = { git = "https://github.com/sigmatactical-org/sigma-racer-sidearm.git", rev = "716234d", default-features = false, features = ["std"] }
vss-map = { git = "https://github.com/sigmatactical-org/vss-map.git", rev = "6e614bb", default-features = false, features = ["json", "yaml"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "logging"] }
rustls-pemfile = "2.2.0"
sha2 = "0.11.0"

[dev-dependencies]
rcgen = "0.14.8"
tempfile = "3.27.0"

[[bin]]
name = "sigma-telemetry-relay"
path = "src/bin/sigma-telemetry-relay.rs"
